hphp/test/zend/good/Zend/tests/add_005.php
<?php

$i = 75636;
$d = 2834681123.123123;

$c = $i + $d;
var_dump($c);

$c = $d + $i;
var_dump($c);

echo "Done\n";
?>